Actualizacion de estudiantes y registro de pago0.3

--- a/src/views/estudiantes.html
+++ b/src/views/estudiantes.html
@@ -62,15 +62,14 @@
                 <button id="back-to-groups">Volver a Grupos</button>
                 <div class="user-table-container">
                     <table>
-                        <thead>
-                            <tr>
-                                <th>Nombre</th>
-                                <th>Edad</th>
-                                <th>Último pago realizado</th>
-                                <th>Deuda pendiente</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
+                    <thead>
+    <tr>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>Último pago realizado</th>
+        <th style="text-align: center;">Estado</th> <th>Acciones</th>
+    </tr>
+</thead>
                         <tbody id="students-table-body"></tbody>
                     </table>
                     <p id="no-students-message" class="info-message" style="display: none;">No hay estudiantes en este grupo.</p>
