--- a/src/views/registrar_pago.html
+++ b/src/views/registrar_pago.html
@@ -235,7 +235,7 @@
 
             <div id="opt-abono" style="display: none;">
                 <label style="font-weight: 600;">Concepto del Abono:</label>
-                <input type="text" id="pay-concepto-abono" placeholder="Ej: Compra de libro, guía, adelanto..." style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px;">
+                <input type="text" id="pay-concepto-abono"  style="width: 100%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px;">
             </div>
           </div>
 
