--- a/src/views/estudiantes.html
+++ b/src/views/estudiantes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudiantes - Just Talk Academy</title>
-    <link rel="stylesheet" href="../../public/gestion.css">
-    <link rel="stylesheet" href="../../public/estudiantes.css">
+    <link rel="stylesheet" href="../../public/css/gestion.css">
+    <link rel="stylesheet" href="../../public/css/estudiantes.css">
 </head>
 <body>
     <div class="dashboard-container">
