--- a/src/views/gestion.html
+++ b/src/views/gestion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Just Talk Academy</title>
-    <link rel="stylesheet" href="../../public/gestion.css">
+    <link rel="stylesheet" href="../../public/css/gestion.css">
     
 </head>
 <body>
