--- a/src/views/registrar_pago.html
+++ b/src/views/registrar_pago.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrar Pago - Just Talk Academy</title>
-    <link rel="stylesheet" href="../../public/gestion.css" />
-    <link rel="stylesheet" href="../../public/estudiantes.css" />
+    <link rel="stylesheet" href="../../public/css/gestion.css" />
+    <link rel="stylesheet" href="../../public/css/estudiantes.css" />
+    <link rel="stylesheet" href="../../public/css/registrar_pago.css" />
     <style>
       /* Estilos específicos para la vista de pagos */
       .payment-container {
