Estilos, barra de busqueda y arreglo de bugs de estudiantes

--- a/src/views/cursos.html
+++ b/src/views/cursos.html
@@ -90,5 +90,6 @@
 
     <script src="../../public/js/menu.js"></script>
     <script src="../../public/js/cursosGrupos.js"></script>
+    <script src="../../public/js/search-cursos.js"></script>
 </body>
 </html>
