--- a/src/views/deudores.html
+++ b/src/views/deudores.html
@@ -23,7 +23,7 @@
           <ul>
             <li><a href="#" id="view-users-btn">Gestión de Usuarios</a></li>
             <li><a href="#" id="view-students-btn">Estudiantes</a></li>
-            <li><a href="#" id="view-cursos-btn">Cursos</a></li>
+            <li><a href="#" id="view-cursos-btn">Cursos/Grupos</a></li>
             <li class="active">
               <a href="#" id="view-deudores-btn">Deudores</a>
             </li>
@@ -687,5 +687,6 @@
         }
       }
     </script>
+    <script src="../../public/js/search-deudores.js"></script>
   </body>
 </html>
