--- a/src/views/estudiantes.html
+++ b/src/views/estudiantes.html
@@ -233,5 +233,6 @@
     <script src="../../public/js/menu.js"></script>
     <script src="../../public/js/estudiantes.js"></script>
     <script src="../../public/js/cursosGrupos.js"></script>
+    <script src="../../public/js/search-estudiantes.js"></script>
 </body>
 </html>
