Actualizacion de visual y de deudas

--- a/src/views/estudiantes.html
+++ b/src/views/estudiantes.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#" id="view-users-btn">Gestión de Usuarios</a></li>
                     <li class="active"><a href="#" id="view-students-btn">Estudiantes</a></li> 
-                    <li><a href="#" id="view-cursos-btn">Cursos</a></li>
+                    <li><a href="#" id="view-cursos-btn">Cursos/Grupos</a></li>
                     <li><a href="#" id="view-deudores-btn">Deudores</a></li>
                     <li class="logout-container"><button id="logout-btn" class="logout-btn" title="Cerrar sesión"><img src="../../public/MiLogOut.png" alt="Salir"/></button></li>
                 </ul>
